# pycprops

./: MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
docs/pycprops/: index.rst
licenses/: LICENSE.rst
pycprops/: __init__.py  cloudalyze.py  decomposition.py  pycprops.py  validations.py  version.py
