[metadata]
name = pycprops
author = Erik Rosolowsky & Adam Leroy
author_email = rosolowsky@ualberta.ca
license = GNU GPL v3+
license_file = licenses/LICENSE.rst
url = https://github.com/low-sky/pycprops
description = Python implementation of the CPROPS algorithm
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = low-sky/pycprops

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy
    astrodendro
    spectral_cube
    skimage


[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
pycprops = data/*

[tool:pytest]
testpaths = "pycprops" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    pycprops/_astropy_init*
    pycprops/conftest.py
    pycprops/*setup_package*
    pycprops/tests/*
    pycprops/*/tests/*
    pycprops/extern/*
    pycprops/version*
    */pycprops/_astropy_init*
    */pycprops/conftest.py
    */pycprops/*setup_package*
    */pycprops/tests/*
    */pycprops/*/tests/*
    */pycprops/extern/*
    */pycprops/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
